# jimmbot_base

./: AUTHORS  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  package.xml
config/: hardware_interface.yaml
include/jimmbot_base/: can_msg_wrapper.hpp  can_packt.h  constants.h  extended_joy.hpp  hardware_interface.hpp  hil_wheel_commander.hpp  jimmbot_hardware_interface.hpp
launch/: base.launch  hardware_interface.launch  jimmbot_base.launch
src/: can_msg_wrapper.cpp  extended_joy.cpp  hardware_interface.cpp  hil_wheel_commander.cpp  jimmbot_hardware_interface.cpp  kinect_aux.cpp
test/: can_msg_wrapper_test.cpp  hardware_interface_test.cpp  hardware_interface_test.test
